--- a/package.json
+++ b/package.json
@@ -23,5 +23,25 @@
   "bugs": {
     "url": "https://github.com/ichavesbr/personal-finance-api/issues"
   },
-  "homepage": "https://github.com/ichavesbr/personal-finance-api#readme"
+  "homepage": "https://github.com/ichavesbr/personal-finance-api#readme",
+  "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "cors": "^2.8.6",
+    "dotenv": "^17.3.1",
+    "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
+    "pg": "^8.18.0",
+    "zod": "^4.3.6"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^25.3.0",
+    "@types/pg": "^8.16.0",
+    "nodemon": "^3.1.14",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
+  }
 }
