--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
   },
   "homepage": "https://github.com/ichavesbr/personal-finance-api#readme",
   "dependencies": {
+    "@prisma/adapter-pg": "^7.4.2",
+    "@prisma/client": "^7.4.2",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "pg": "^8.18.0",
+    "pg": "^8.19.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
@@ -41,9 +43,10 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^25.3.0",
-    "@types/pg": "^8.16.0",
+    "@types/node": "^25.3.2",
+    "@types/pg": "^8.18.0",
     "nodemon": "^3.1.14",
+    "prisma": "^7.4.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
